# backend

./: .dockerignore  .env_example  .gitignore  DOCKER.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  TODO.md  alembic.ini  api_demo.py  app.db  docker-compose.yaml  docker-entrypoint.sh  environment.yaml  environment.yml  package.json  pyproject.toml  render.yaml
.chromadb/: chroma.sqlite3
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20250821_1748_init_users_orders_items.py  20250821_1752_add_roles_user_roles_products.py  20250821_1754_add_fk_order_items_product_id.py  20250821_1815_add_chat_tables.py  20250822_1559_add_customers_table.py  20250822_1604_merge_heads.py  20250823_1355_add_reports_insights_and_materialized_views.py  20250823_1400_add_payments_refunds_gl_entries.py  20250823_1410_merge_reporting_branch.py  677a6b8f90ea_add_warehouses_and_inventory.py  92093110c13f_add_audit_logs_table_and_middleware_.py  a1b2c3d4e5f6_add_debts_tables.py
app/: celery_app.py  main.py
app/agents/: crm_agent.py  finance_agent.py  forecasting_agent.py  fraud_detection_agent.py  inventory_agent.py  orchestrator.py  orders_agent.py  orders_lookup_agent.py
app/api/: router.py
app/api/v1/endpoints/: ai.py  auth.py  chat.py  customers.py  debts.py  forecasts.py  health.py  inventory.py  notifications.py  orders.py  products.py  reports.py  roles.py  testall.py  tools.py
app/core/: __init__.py  app_state.py  audit.py  config.py  deps.py  logging.py  middleware.py  security.py  sentry.py
app/db/: __init__.py  session.py
app/jobs/: reports_tasks.py
app/kb/: chroma.py  service.py
app/models/: __init__.py  audit.py  auth_tokens.py  chat.py  customers.py  debts.py  forecasts.py  inventory.py  orders.py  products.py  roles.py  users.py
app/realtime/: emitter.py  server.py
app/schemas/: __init__.py  chat.py  common.py  customers.py  debts.py  inventory.py  orders.py  products.py  roles.py
app/services/: chroma_client.py  debt_service.py  email_service.py  llm_client.py  multilingual_client.py  orders_service.py  reports_service.py  whisper_client.py
app/services/ai/: groq_client.py
app/utils/: helpers.py  tools_path.py
docs/: AI_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  backend-render-deploy.md  frontendPRD.md  render_mcp.md  report.md  wireframe.md
scripts/: render_cli.py
tests/: conftest.py  test_agents.py  test_ai.py  test_ai_endpoints.py  test_audit_logging.py  test_chroma_client.py  test_debt_service.py  test_debt_service_full.py  test_email_service.py  test_endpoints_full.py  test_health.py  test_kb.py  test_kb_chroma.py  test_llm_client.py  test_main_app.py  test_main_lifespan.py  test_multilingual_client.py  test_orders_api.py  test_orders_service.py  test_realtime.py  test_realtime_emitters.py  test_realtime_server.py  test_reports_endpoints.py  test_reports_service.py  test_reports_service_full.py  test_schemas.py  test_security.py  test_tools_endpoint.py  test_utils.py  test_whisper_client.py
