[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wakaagent-backend"
version = "0.1.0"
description = "WakaAgent AI Backend (FastAPI modular monolith with agents, realtime, and AI services)"
authors = [{ name = "WakaAgent Team" }]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["fastapi", "ai", "agents", "socket.io", "postgres", "redis", "whisper", "ollama", "chromadb"]

# Runtime dependencies (pin minor where reasonable)
[project.dependencies]
fastapi = "^0.112.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.30"
alembic = "^1.13.2"
psycopg = { version = "^3.1.19", extras = ["binary"] }
redis = "^5.0.4"
python-socketio = "^5.11.1"
httpx = "^0.27.0"
python-jose = "^3.3.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
structlog = "^24.1.0"
loguru = "^0.7.2"
tenacity = "^8.3.0"
groq = ">=0.9.0"

# Optional: typing + dev tools in optional-dependencies
[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "anyio>=4.0",
  "ruff>=0.5.0",
  "black>=24.4",
  "mypy>=1.10.0"
]

[project.scripts]
waka-backend = "app.main:run"

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
