[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wakaagent-backend"
version = "0.1.0"
license = "Apache-2.0"
description = "WakaAgent AI Backend (FastAPI modular monolith with agents, realtime, and AI services)"
authors = [{ name = "WakaAgent Team" }]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["fastapi", "ai", "agents", "socket.io", "postgres", "redis", "whisper", "ollama", "chromadb"]

# Runtime dependencies (pin minor where reasonable)
dependencies = [
  "fastapi>=0.112.0,<0.113.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "psycopg[binary]>=3.1.19,<4.0.0",
  "redis>=5.0.4,<6.0.0",
  "python-socketio>=5.11.1,<6.0.0",
  "httpx>=0.27.0,<0.28.0",
  "python-jose>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "structlog>=24.1.0,<25.0.0",
  "loguru>=0.7.2,<1.0.0",
  "tenacity>=8.3.0,<9.0.0",
  "groq>=0.9.0",
  "celery>=5.4.0,<6.0.0",
]

# Optional: typing + dev tools in optional-dependencies
[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "anyio>=4.0",
  "ruff>=0.5.0",
  "black>=24.4",
  "mypy>=1.10.0"
]

[project.scripts]
waka-backend = "app.main:run"

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
