[tool.poetry]
name = "wakaagent-backend"
version = "0.1.0"
description = "WakaAgent AI Backend (FastAPI modular monolith with agents, realtime, and AI services)"
authors = ["WakaAgent Team"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version = "^3.1.19"}
redis = "^5.0.4"
python-socketio = "^5.11.1"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
structlog = "^24.1.0"
loguru = "^0.7.2"
tenacity = "^8.3.0"
groq = "^0.9.0"
celery = {version = "^5.4.0", optional = true}
pandas = "^2.3.3"

# AI/ML dependencies with platform-specific handling
chromadb = {version = ">=0.4.24", allow-prereleases = true}
sentence-transformers = {version = "^3.0.0", optional = true}
torch = {version = "2.2.0", source = "pytorch", optional = true}
transformers = {version = "^4.37.0", optional = true}
huggingface-hub = {version = "^0.21.0", optional = true}
posthog = {version = "^3.2.0", python = ">=3.10"}
chroma-hnswlib = {version = "0.7.6", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
anyio = "^4.0.0"
ruff = "^0.5.0"
black = "^24.4.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
waka-backend = "app.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Platform-specific package sources
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true